
java {
  sourceCompatibility = JavaVersion.VERSION_16
  targetCompatibility = JavaVersion.VERSION_16
}

test {
  useJUnitPlatform()

  jvmArgs(['--illegal-access=permit'])
}

dependencies {
  implementation project(":purejson-lib")
  testImplementation 'com.google.testing.compile:compile-testing:0.19'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
  testImplementation 'org.junit.platform:junit-platform-runner:1.7.2'
  testImplementation 'com.github.tonivade:purecheck:0.2'
  testImplementation 'com.github.tonivade:purefun-monad:3.0'
  testImplementation 'com.github.tonivade:purefun-instances:3.0'
  testImplementation 'com.google.code.gson:gson:2.8.6'
}